# course-assistant-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main_bot.py  main_worker.py
app/bot/: __init__.py  admin_handlers.py  admin_upload.py  announce_flow.py  application.py  dispatch.py  drive_handlers.py  handlers.py  recommendation_handlers.py  router.py  schedule_handlers.py  submission_flow.py  subscription_handlers.py  summary_handlers.py
app/core/: __init__.py  cache.py  errors.py  health.py  i18n.py  logging.py  metrics.py  ratelimit.py  settings.py
app/domain/: __init__.py  lesson_map.py  models.py
app/graph/: __init__.py  prompts.py  router_node.py
app/repo/: __init__.py  db.py  models.py  repositories.py
app/services/: __init__.py  content_extraction.py  drive.py  drive_parser.py  email.py  embeddings.py  homework.py  indexer.py  lesson_map_store.py  llm.py  notifier.py  recommendations.py  recordings.py  resources_catalog.py  schedule.py  schedule_scraper.py  schedule_store.py  submission.py  suggester.py  summaries.py  transcription.py  vectorstore.py  vectorstore_db.py
app/workers/: __init__.py  bootstrap.py  drive_watcher.py  precompute.py  schedule_refresh.py  scheduler.py
data/: .gitkeep  lesson_map.yaml  oz_veruach.db  resources.yaml  schedule.yaml
docs/: architecture.md
migrations/: env.py
migrations/versions/: 0001_baseline.py
scripts/: get_google_token.py
tests/: conftest.py
tests/fixtures/: drive_fixtures.py  schedule_page.txt
tests/integration/: test_admin_commands.py  test_admin_gating.py  test_admin_upload.py  test_bot_handlers.py  test_drive_flow.py  test_health.py  test_materials_flow.py  test_schedule_flow.py  test_submission_flow.py  test_subscriptions.py  test_summary_flow.py
tests/unit/: test_c8_guardrail.py  test_content_extraction.py  test_drive_parser.py  test_drive_watcher.py  test_homework_service.py  test_i18n_and_errors.py  test_indexer.py  test_lesson_map.py  test_logging_redaction.py  test_model_registry.py  test_notifier.py  test_ratelimit_metrics.py  test_recommendations.py  test_recordings_service.py  test_repositories.py  test_resources_catalog.py  test_router_node.py  test_schedule_router.py  test_schedule_scraper.py  test_schedule_service.py  test_scheduler.py  test_service_interfaces.py  test_session_model.py  test_settings.py  test_submission_email.py  test_submission_send.py  test_submission_state.py  test_summaries.py  test_transcription.py  test_vectorstore.py
